Add AWS Terraform deployment for anxietyaicure.com
Infrastructure (ECS Fargate + RDS + ALB):
- VPC with public/private subnets across 2 AZs, NAT Gateway
- ECR repos for all 3 service images
- Two RDS PostgreSQL 16 db.t3.micro instances (user-db, forum-db)
- ECS Fargate cluster with task definitions and services
- Internet-facing ALB with host-based routing:
    anxietyaicure.com / www → frontend
    users.anxietyaicure.com → user-service
    forum.anxietyaicure.com → forum-service
- ACM wildcard cert (*.anxietyaicure.com) with Route53 DNS validation
- Secrets Manager for DB password and JWT secret
- IAM roles for ECS execution and task

App changes:
- CORS origins now configurable via CORS_ALLOWED_ORIGINS env var
  (defaults to localhost for local K8s, production domains injected by ECS)
- deploy-aws.sh: one-shot build + push to ECR + force ECS redeployment

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>